2017-03-20  JMB  Removed image resolution limit

    All of PortaBase's supported platforms now have much more RAM than
    the original Sharp Zaurus (and Qt has gotten better about downscaling
    PNG images while loading), so the 800x600 resolution cap no longer
    makes sense.  The limit has been removed; images smaller than the
    screen resolution are shown at their actual size, and larger ones are
    scaled down to fit on the screen.  This means, for example, that digital
    photos can now be stored in a PortaBase file and (if the file wasn't
    explicitly altered in the image editor when selecting it) exported out
    again with no quality loss and all metadata intact.  Note, however,
    that Metakit's 1 GB file size limit significantly constrains the
    number of high-resolution photos you can fit in a single PortaBase file.

2017-03-19  JMB  More recent files remembered

    Increased the number of recent files shown in the File menu and on
    the file selection screen from 5 to 10.  Also abbreviated the text
    on the file import button to better fit in portrait mode on Android
    phones.

2017-03-17  JMB  Dynamically update fullscreen action text

    The fullscreen action now changes the text in menus and tooltips
    appropriately after it has been activated (to say "Exit Fullscreen"
    instead of "Fullscreen", etc.).  Additionally, I'd overlooked that
    a small checkbox was been shown next to the text in the menu on
    Android devices; suppressed that now that the action's text is
    more appropriate.

2017-03-16  JMB  Updated source code documentation

    Upgraded Doxygen and its configuration files, and fixed some problems
    it found with the source code documentation comments.

2017-03-11  JMB  Added Android port

    Added support for running PortaBase on Android 4.4 (KitKat) and above.
    It works well enough for my own daily use, but I want to go through
    a short beta testing period before releasing it to the app store; let