@@ -1,3 +1,11 @@
+2017-03-22  JMB  Better image fullscreen mode
+
+    PortaBase was still using a hack for fullscreen image display that
+    predated the addition of proper fullscreen support in Qt, and at
+    least with Qt 5 it sometimes resulted in odd failures to return to
+    normal display mode.  Switched over to the same approach used for
+    the main window's fullscreen mode.
+
 2017-03-20  JMB  Removed image resolution limit
 
     All of PortaBase's supported platforms now have much more RAM than
